--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -16,66 +16,277 @@
   "badge": {
     "cool": "Керемет",
     "discount": "Жеңілдік",
-    "easyToBuy": "Сатып алу оңай"
+    "easyToBuy": "Оңай сатып алу"
   },
   "button": {
     "getStart": "Бастау"
   },
   "hero": {
-    "title": "және AI Hack",
-    "title2": "мүмкіндігін зерттеңіз",
-    "subtitle": "Brainwave мүмкіндігін ашыңыз. Pixcels Themes AI чат қолданбасын пайдаланыңыз",
-    "cta": "AI арқылы бастау",
-    "rotated1": "AI Chating",
-    "rotated2": "AI Writing"
+    "title": "Мүмкіндіктерін зертте",
+    "title2": "AI Hack",
+    "subtitle": "Brainwave жасанды интеллектінің мүмкіндіктерін ашыңыз. Pixcels Themes ашық AI чат қолданбасын пайдаланыңыз",
+    "cta": "AI-мен бастау",
+    "rotated1": "AI Чат",
+    "rotated2": "AI Мәтін"
   },
   "form": {
-    "placeholder": "AI үшін мәтін енгізіңіз...",
-    "button": "AI арқылы бастау"
+    "placeholder": "AI үшін сұраныс енгізіңіз...",
+    "button": "AI-мен бастау"
   },
   "trust": {
-    "title": "800 000+ өнімді компания бізге сенеді"
+    "title": "800 000+ өнімді компания сенім білдірді"
   },
   "tabs": {
-    "headline": "Rainbow AI мүмкіндігін ашады",
-    "title": "Контент жасаушыларға арналған генеративті AI.",
+    "headline": "Rainbow AI мүмкіндіктерін ашады",
+    "title": "Жасампаздарға арналған генеративті AI.",
     "audio": {
-      "title": "AI аудио генерациясы",
+      "label": "Аудио",
+      "title": "AI арқылы аудио генерациясы",
+      "text": "Аудио генерациялайтын AI — мәтіннен немесе деректерден дыбыс жасайтын жасанды интеллект.",
       "features": [
-        "Transformer модельдері",
+        "Трансформер модельдері",
         "Шартты генеративті модельдер",
-        "Алдын ала оқытылған модельдер",
-        "Вариациялық автоэнкодерлер"
+        "Алдын ала үйретілген модельдер",
+        "Вариациялық автокодтаушылар"
       ],
-      "cta": "Қазір зерттеңіз →"
+      "cta": "Зерттеуді бастау →"
     },
     "code": {
-      "title": "Код"
+      "label": "Код",
+      "title": "AI арқылы код генерациясы",
+      "text": "Жетілдірілген модельдер арқылы мәтіндік сұраныстардан таза әрі жұмыс істейтін код жасаңыз.",
+      "features": [
+        "Синтаксисті түсінетін трансформерлер",
+        "Контекстік автотолықтыру",
+        "Көп тілдік қолдау",
+        "Әдепкіде қауіпсіз архитектура"
+      ],
+      "cta": "Зерттеуді бастау →"
     },
     "photo": {
-      "title": "Фото"
+      "label": "Фото",
+      "title": "AI арқылы сурет генерациясы",
+      "text": "Диффузиялық модельдер көмегімен мәтіннен жоғары сапалы суреттер жасаңыз.",
+      "features": [
+        "Stable Diffusion",
+        "Стильді тасымалдау",
+        "Inpainting және Outpainting",
+        "Мәтіннен-суретке pipeline"
+      ],
+      "cta": "Зерттеуді бастау →"
     },
     "video": {
-      "title": "Видео"
+      "label": "Видео",
+      "title": "AI арқылы видео генерациясы",
+      "text": "Сценарийлерден, раскадровкалардан немесе дауыстық енгізуден динамикалық видеолар жасаңыз.",
+      "features": [
+        "Сахналарды синтездеу",
+        "Ерін қимылын сәйкестендіру",
+        "Қозғалысты интерполяциялау",
+        "Мультимодальды рендеринг"
+      ],
+      "cta": "Зерттеуді бастау →"
     }
   },
   "carousel": {
-    "headline": "Адамдарға көмектесу",
-    "title": "Ақылдырақ сөйлесіңіз, қиындатпай"
+    "headline": "Адамдарға көмектесеміз",
+    "title": "Ақылдырақ сөйлесіңіз, күрделендірмей"
   },
-  "howItWorks": {
-    "headline": "Қалай жұмыс істейді",
-    "title": "AI чатботына қосылыңыз",
-    "description": "Чатботқа қол жеткізуге болатын платформаны немесе интерфейсті анықтаңыз. Бұл веб‑сайт, мессенджер немесе арнайы қосымша болуы мүмкін.",
-    "cta": "Қазір байқап көріңіз →"
+  "cards": {
+    "ask": {
+      "title": "Кез келген сұрақ қойыңыз",
+      "description": "Әртүрлі дереккөздерді іздемей-ақ сұрақтарға жылдам жауап табуға көмектеседі."
+    },
+    "connect": {
+      "title": "Барлық жерде байланыс",
+      "description": "Кез келген платформада және кез келген уақытта жауап алуға мүмкіндік береді."
+    },
+    "fast": {
+      "title": "Жылдам жауап",
+      "description": "Күту мен артық әрекеттерсіз жедел жауаптар."
+    }
+  },
+  "tabs2": {
+    "connect": {
+      "label": "AI-мен байланыс",
+      "title": "AI чат-ботқа қосылу",
+      "description": "Чат-ботқа қол жеткізу үшін платформаны немесе интерфейсті анықтаңыз — сайт, мессенджер немесе жеке қолданба.",
+      "headline": "Бұл қалай жұмыс істейді"
+    },
+    "workflow": {
+      "label": "Жұмыс процесі",
+      "title": "Жұмыс процесін оңтайландыру",
+      "description": "Тапсырмаларды тиімді әрі ыңғайлы етуге арналған құралдар мен тәсілдерді зерттеңіз.",
+      "headline": "Тиімділік"
+    },
+    "cyber": {
+      "label": "Киберқауіпсіздік",
+      "title": "Сандық қауіпсіздікті қорғау",
+      "description": "Жеке деректер мен онлайн тұлғаны қорғау стратегияларын меңгеріңіз.",
+      "headline": "Қауіпсіздік навигациясы"
+    },
+    "data": {
+      "label": "Деректерді талдау",
+      "title": "Деректер аналитикасын түсіну",
+      "description": "Деректерді талдаудың негіздерін және құнды ақпарат алудың әдістерін үйреніңіз.",
+      "headline": "Аналитика шеберлігі"
+    },
+    "cta": "Қазір байқап көру →"
   },
   "collaboration": {
-    "headline": "AI бірлескен жұмысы",
-    "title": "Ыңғайлы байланыс үшін AI чат қолданбасы",
-    "cta": "Қазір байқап көріңіз →"
+    "headline": "AI Ынтымақтастығы",
+    "title": "Тиімді бірлескен жұмысқа арналған AI чат",
+    "cta": "Байқап көру →"
   },
   "community": {
     "title": "AI сарапшылары қауымдастығына қосылыңыз",
-    "description": "Контентті жылдам әрі сапалы жасау үшін AI қолданатын 80+ маман мен компаниядан үйреніңіз."
+    "description": "ИИ арқылы контентті жылдам жасайтын 80+ авторлар мен компаниялардан үйреніңіз."
+  },
+  "testimonials": {
+    "headline": "Адамдарға көмектесеміз",
+    "title": "Қауымдастық пікірлері",
+    "item": {
+      "role": "Медбике көмекшісі",
+      "quote": "Pixcels Themes біздің жұмысымыздың ажырамас бөлігіне айналды!"
+    }
+  },
+  "features": {
+    "button": "Толығырақ →"
+  },
+  "reviews": {
+    "title": "20 000+ пікір негізінде"
+  },
+  "download": {
+    "headline": "Pixcels-пен бастаңыз",
+    "title": "AI өнімдерін қолданып көріңіз",
+    "description": "AI чат-ботымен қарым-қатынас негізінде сізге жеке ұсыныстар беріледі."
+  },
+  "page": {
+    "tabsWithBackground": {
+      "title": "Жасампаздарға арналған генеративті AI.",
+      "headline": "Rainbow AI мүмкіндіктерін ашады"
+    },
+    "featuresCarousel": {
+      "button": "Толығырақ →"
+    },
+    "tabsWithUnderButtons": {
+      "button": "Қазір байқап көру →"
+    },
+    "collaboration": {
+      "headline": "AI Ынтымақтастығы",
+      "title": "Тиімді бірлескен жұмысқа арналған AI чат",
+      "cta": "Байқап көру →"
+    },
+    "community": {
+      "title": "AI сарапшылары қауымдастығы",
+      "description": "Жұмысты жеделдету үшін AI қолданатын мамандардан үйреніңіз.",
+      "cta": "Тегін қосылу"
+    },
+    "featureCards": {
+      "noRisk": {
+        "title": "100% ақшаны қайтару кепілдігі",
+        "description": "Сатып алған күннен бастап 14 күн ішінде қайтарылады"
+      },
+      "upgrade": {
+        "title": "Кез келген уақытта жаңарту немесе бас тарту",
+        "description": "Көптеген нұсқалар мен икемді пайдалану."
+      },
+      "free": {
+        "title": "Сенімді емес пе? Тегін көріңіз",
+        "description": "Сатып алған күннен бастап 14 күн ішінде қайтарылады"
+      }
+    },
+    "reviewLogos": {
+      "title": "20 000+ пікір негізінде"
+    }
+  },
+  "pricing": {
+    "headline": "Бағалар",
+    "title": "Барлығына арналған тарифтер",
+    "switcher": {
+      "monthly": "Ай сайын",
+      "yearly": "Жыл сайын",
+      "discountBadge": "–10%"
+    },
+    "badge": {
+      "bestOffer": "Ең тиімді ұсыныс"
+    },
+    "featuresTitle": "Мүмкіндіктер",
+    "actions": {
+      "showLess": "Жасыру",
+      "showMore": "Көбірек көрсету",
+      "getStarted": "Бастау"
+    },
+    "limitedOffer": "Шектеулі ұсыныс",
+    "plans": {
+      "basic": {
+        "name": "Базалық",
+        "description": "Үлкен командалар мен компаниялар үшін",
+        "monthly": "Тегін",
+        "yearly": "Тегін",
+        "features": [
+          "7 700 тапсырма, 3–5 күн ішінде",
+          "6+ базалық әзірлеме",
+          "5+ тапсырма біртіндеп орындалады",
+          "Басқару панелі және Slack арқылы AI блог жаңартулары",
+          "Басқару панелі және Slack арқылы кеңейтілген жаңартулар"
+        ]
+      },
+      "premium": {
+        "name": "Премиум",
+        "description": "Үлкен командалар мен компаниялар үшін",
+        "monthly": "$59.00 / айына",
+        "yearly": "$499.00 / жылына",
+        "features": [
+          "12 700 тапсырма, 7–9 күн ішінде",
+          "6+ базалық әзірлеме",
+          "5+ тапсырма біртіндеп орындалады",
+          "7 700 тапсырма, 3–5 күн ішінде",
+          "Басқару панелі және Slack арқылы AI блог жаңартулары",
+          "Басқару панелі және Slack арқылы кеңейтілген жаңартулар"
+        ]
+      },
+      "enterprise": {
+        "name": "Корпоративтік",
+        "description": "Үлкен командалар мен компаниялар үшін",
+        "monthly": "$79.00 / айына",
+        "yearly": "$599.00 / жылына",
+        "features": [
+          "15 700 тапсырма, 15–30 күн ішінде",
+          "6+ базалық әзірлеме",
+          "5+ тапсырма біртіндеп орындалады",
+          "7 700 тапсырма, 3–5 күн ішінде",
+          "6+ базалық әзірлеме"
+        ]
+      }
+    }
+  },
+  "footer": {
+    "about": "Оқырман мәтінді оқығанда мазмұннан оңай алаңдайтыны бұрыннан белгілі.",
+    "quickLinksTitle": "Жылдам сілтемелер",
+    "servicesTitle": "Қызметтер",
+    "contactTitle": "Байланыс",
+    "quickLinks": {
+      "pages": "Беттер",
+      "blog": "Блог",
+      "contact": "Байланыс",
+      "howToUse": "Қалай пайдалану керек",
+      "roadmap": "Жол картасы"
+    },
+    "services": {
+      "imageGenerator": "Сурет генераторы",
+      "videoGenerator": "Видео генераторы",
+      "textGenerator": "Мәтін генераторы",
+      "codeGenerator": "Код генераторы",
+      "educationFeedback": "Оқу үшін кері байланыс"
+    },
+    "contact": {
+      "address": "8819 Ohio St. South Gate, Солтүстік Америка, АҚШ",
+      "phone": "📞 +1 386-688-3295"
+    },
+    "newsletter": {
+      "title": "Жаңалықтарға жазылу",
+      "placeholder": "Email енгізіңіз"
+    }
   }
 }
