--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -14,7 +14,7 @@
     "sessions": "Сессии"
   },
   "badge": {
-    "cool": "Классно",
+    "cool": "Круто",
     "discount": "Скидка",
     "easyToBuy": "Легко купить"
   },
@@ -22,15 +22,15 @@
     "getStart": "Начать"
   },
   "hero": {
-    "title": "Исследуйте потенциал ",
+    "title": "Изучи потенциал",
     "title2": "AI Hack",
-    "subtitle": "Раскройте потенциал Brainwave. Используйте приложение для общения с ИИ от Pixcels Themes",
+    "subtitle": "Раскрой потенциал ИИ Brainwave. Используй открытое AI-приложение для общения Pixcels Themes",
     "cta": "Начать с ИИ",
-    "rotated1": "AI Chating",
-    "rotated2": "AI Writing"
+    "rotated1": "AI Чат",
+    "rotated2": "AI Тексты"
   },
   "form": {
-    "placeholder": "Введите что‑нибудь, чтобы запросить ИИ...",
+    "placeholder": "Введите запрос для ИИ...",
     "button": "Начать с ИИ"
   },
   "trust": {
@@ -38,44 +38,255 @@
   },
   "tabs": {
     "headline": "Rainbow раскрывает потенциал ИИ",
-    "title": "Генеративный ИИ, созданный для создателей.",
+    "title": "Генеративный ИИ для создателей.",
     "audio": {
-      "title": "Генерация аудио с помощью ИИ",
+      "label": "Аудио",
+      "title": "Генерация аудио с ИИ",
+      "text": "ИИ для генерации аудио — это искусственный интеллект, создающий звук из текста или данных.",
       "features": [
-        "Модели Transformer",
+        "Трансформер-модели",
         "Условные генеративные модели",
         "Предобученные модели",
-        "Вариационные автоэнкодеры"
+        "Вариационные автокодировщики"
       ],
       "cta": "Начать исследование →"
     },
     "code": {
-      "title": "Код"
+      "label": "Код",
+      "title": "Генерация кода с ИИ",
+      "text": "Создавайте чистый и функциональный код из текстовых запросов с помощью продвинутых моделей.",
+      "features": [
+        "Синтаксически осведомлённые трансформеры",
+        "Контекстное автодополнение",
+        "Поддержка нескольких языков",
+        "Безопасная архитектура по умолчанию"
+      ],
+      "cta": "Начать исследование →"
     },
     "photo": {
-      "title": "Фото"
+      "label": "Фото",
+      "title": "Генерация изображений с ИИ",
+      "text": "Создавайте высококачественные изображения по текстовым запросам с помощью диффузионных моделей.",
+      "features": [
+        "Stable Diffusion",
+        "Перенос стиля",
+        "Inpainting и Outpainting",
+        "Pipeline текст-в-изображение"
+      ],
+      "cta": "Начать исследование →"
     },
     "video": {
-      "title": "Видео"
+      "label": "Видео",
+      "title": "Генерация видео с ИИ",
+      "text": "Создавайте динамичные видео на основе сценариев, раскадровок или голосового ввода.",
+      "features": [
+        "Синтез сцен",
+        "Синхронизация губ",
+        "Интерполяция движения",
+        "Мультимодальный рендеринг"
+      ],
+      "cta": "Начать исследование →"
     }
   },
   "carousel": {
     "headline": "Помогаем людям",
     "title": "Общайтесь умнее, а не сложнее с"
   },
-  "howItWorks": {
-    "headline": "Как это работает",
-    "title": "Подключитесь к AI‑чатботу",
-    "description": "Определите платформу или интерфейс, через который вы можете получить доступ к чатботу. Это может быть сайт, мессенджер или отдельное приложение.",
+  "cards": {
+    "ask": {
+      "title": "Спрашивайте что угодно",
+      "description": "Помогает быстро находить ответы на вопросы без необходимости искать информацию в разных источниках."
+    },
+    "connect": {
+      "title": "Связь везде",
+      "description": "Позволяет получать ответы в любое время и на любой платформе."
+    },
+    "fast": {
+      "title": "Быстрый отклик",
+      "description": "Мгновенные ответы без ожиданий и лишних действий."
+    }
+  },
+  "tabs2": {
+    "connect": {
+      "label": "Связь с ИИ",
+      "title": "Подключение к AI-чатботу",
+      "description": "Определите платформу или интерфейс для доступа к чат-боту — сайт, мессенджер или отдельное приложение.",
+      "headline": "Как это работает"
+    },
+    "workflow": {
+      "label": "Оптимизация работы",
+      "title": "Упростите рабочие процессы",
+      "description": "Изучите инструменты и подходы для повышения эффективности и удобства работы.",
+      "headline": "Эффективность"
+    },
+    "cyber": {
+      "label": "Кибербезопасность",
+      "title": "Защита цифрового присутствия",
+      "description": "Узнайте о мерах и стратегиях защиты личных данных и онлайн-идентичности.",
+      "headline": "Навигация в безопасности"
+    },
+    "data": {
+      "label": "Аналитика данных",
+      "title": "Понимание аналитики данных",
+      "description": "Изучите основы анализа данных и методы извлечения ценной информации.",
+      "headline": "Мастерство аналитики"
+    },
     "cta": "Попробовать сейчас →"
   },
   "collaboration": {
-    "headline": "Совместная работа с ИИ",
-    "title": "AI‑чат для бесшовного взаимодействия",
-    "cta": "Попробовать сейчас →"
+    "headline": "AI-Коллаборация",
+    "title": "AI-чат для эффективного взаимодействия",
+    "cta": "Попробовать →"
   },
   "community": {
-    "title": "Присоединяйтесь к сообществу AI‑экспертов",
-    "description": "Познакомьтесь и учитесь у 80+ создателей и компаний, которые делятся тем, как используют ИИ для создания контента быстрее и лучше."
+    "title": "Присоединяйтесь к сообществу AI-экспертов",
+    "description": "Учитесь у более чем 80 создателей и компаний, которые используют ИИ для быстрого создания контента."
+  },
+  "testimonials": {
+    "headline": "Помогаем людям",
+    "title": "Мнения сообщества",
+    "item": {
+      "role": "Медицинский ассистент",
+      "quote": "Pixcels Themes стали неотъемлемой частью нашей работы!"
+    }
+  },
+  "features": {
+    "button": "Узнать больше →"
+  },
+  "reviews": {
+    "title": "На основе 20 000+ отзывов"
+  },
+  "download": {
+    "headline": "Начните с Pixcels",
+    "title": "Испытайте AI-продукты",
+    "description": "На основе общения с AI-чатботом вы получите персональные рекомендации."
+  },
+  "page": {
+    "tabsWithBackground": {
+      "title": "Генеративный ИИ для создателей.",
+      "headline": "Rainbow раскрывает потенциал ИИ"
+    },
+    "featuresCarousel": {
+      "button": "Узнать больше →"
+    },
+    "tabsWithUnderButtons": {
+      "button": "Попробовать →"
+    },
+    "collaboration": {
+      "headline": "AI-Коллаборация",
+      "title": "AI-чат для эффективного взаимодействия",
+      "cta": "Попробовать →"
+    },
+    "community": {
+      "title": "Сообщество AI-экспертов",
+      "description": "Учитесь у профессионалов, использующих ИИ для ускорения работы.",
+      "cta": "Присоединиться бесплатно"
+    },
+    "featureCards": {
+      "noRisk": {
+        "title": "100% гарантия возврата средств",
+        "description": "Возврат возможен в течение 14 дней с момента покупки"
+      },
+      "upgrade": {
+        "title": "Обновляйте или отменяйте в любое время",
+        "description": "Множество вариантов и гибкость использования."
+      },
+      "free": {
+        "title": "Не уверены? Попробуйте бесплатно",
+        "description": "Возврат возможен в течение 14 дней с момента покупки"
+      }
+    },
+    "reviewLogos": {
+      "title": "Основано на 20 000+ отзывах"
+    }
+  },
+  "pricing": {
+    "headline": "Цены",
+    "title": "Тарифы для каждого",
+    "switcher": {
+      "monthly": "Ежемесячно",
+      "yearly": "Ежегодно",
+      "discountBadge": "–10%"
+    },
+    "badge": {
+      "bestOffer": "Лучшее предложение"
+    },
+    "featuresTitle": "Возможности",
+    "actions": {
+      "showLess": "Скрыть",
+      "showMore": "Показать больше",
+      "getStarted": "Начать"
+    },
+    "limitedOffer": "Ограниченное предложение",
+    "plans": {
+      "basic": {
+        "name": "Базовый",
+        "description": "Для больших команд и компаний",
+        "monthly": "Бесплатно",
+        "yearly": "Бесплатно",
+        "features": [
+          "7 700 задач, срок 3–5 дней",
+          "6+ базовых разработок",
+          "5+ задач по одной",
+          "AI-обновления блога через панель и Slack",
+          "Расширенные обновления через панель и Slack"
+        ]
+      },
+      "premium": {
+        "name": "Премиум",
+        "description": "Для больших команд и компаний",
+        "monthly": "$59.00 / в месяц",
+        "yearly": "$499.00 / в год",
+        "features": [
+          "12 700 задач, срок 7–9 дней",
+          "6+ базовых разработок",
+          "5+ задач по одной",
+          "7 700 задач, срок 3–5 дней",
+          "AI-обновления блога через панель и Slack",
+          "Расширенные обновления через панель и Slack"
+        ]
+      },
+      "enterprise": {
+        "name": "Корпоративный",
+        "description": "Для больших команд и компаний",
+        "monthly": "$79.00 / в месяц",
+        "yearly": "$599.00 / в год",
+        "features": [
+          "15 700 задач, срок 15–30 дней",
+          "6+ базовых разработок",
+          "5+ задач по одной",
+          "7 700 задач, срок 3–5 дней",
+          "6+ базовых разработок"
+        ]
+      }
+    }
+  },
+  "footer": {
+    "about": "Давно известно, что читатель отвлекается на содержимое при чтении.",
+    "quickLinksTitle": "Быстрые ссылки",
+    "servicesTitle": "Сервисы",
+    "contactTitle": "Контакты",
+    "quickLinks": {
+      "pages": "Страницы",
+      "blog": "Блог",
+      "contact": "Контакты",
+      "howToUse": "Как использовать",
+      "roadmap": "Дорожная карта"
+    },
+    "services": {
+      "imageGenerator": "Генератор изображений",
+      "videoGenerator": "Генератор видео",
+      "textGenerator": "Генератор текста",
+      "codeGenerator": "Генератор кода",
+      "educationFeedback": "Обратная связь для обучения"
+    },
+    "contact": {
+      "address": "8819 Ohio St. South Gate, Северная Америка, США",
+      "phone": "📞 +1 386-688-3295"
+    },
+    "newsletter": {
+      "title": "Подписка на новости",
+      "placeholder": "Введите ваш email"
+    }
   }
 }
