--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -1,4 +1,51 @@
 {
+  "services": {
+    "pdfEditor": {
+      "title": "Онлайн PDF редакторы",
+      "headline": "PDF файлдарын онлайн өңдеу",
+      "subtitle": "Мәтін қосыңыз, қолтаңба салыңыз және PDF файлын жүктеп алыңыз.",
+      "upload": {
+        "title": "PDF жүктеу",
+        "add": "Файл қосу",
+        "start": "Өңдеуді бастау",
+        "replace": "Файлды ауыстыру",
+        "clear": "Тізімді тазалау",
+        "hint": "Өңдеуді бастау үшін PDF файлдарын жүктеңіз."
+      },
+      "pages": "Беттер",
+      "page": "Бет",
+      "preview": "Алдын ала қарау",
+      "previewHint": "Алдымен файл жүктеңіз.",
+      "tools": {
+        "text": "Мәтін",
+        "signature": "Қолтаңба"
+      },
+      "text": {
+        "title": "Мәтін қосу"
+      },
+      "applyText": "Мәтінді қолдану",
+      "signature": {
+        "title": "Қолтаңба салу",
+        "clear": "Тазалау"
+      },
+      "applySignature": "Қолтаңбаны қолдану",
+      "actions": {
+        "undo": "Болдырмау",
+        "redo": "Қайталау",
+        "download": "Жүктеу"
+      },
+      "errors": {
+        "create": "PDF тапсырмасын жасау мүмкін болмады.",
+        "applyText": "Мәтінді қосу мүмкін болмады.",
+        "applySignature": "Қолтаңба қосу мүмкін болмады.",
+        "undo": "Әрекетті қайтару мүмкін болмады.",
+        "redo": "Қайталау мүмкін болмады.",
+        "download": "Файлды жүктеу мүмкін болмады."
+      },
+      "dpi": "DPI",
+      "version": "Нұсқа"
+    }
+  },
   "menu": {
     "home": "Басты бет",
     "tools": "Құралдар",
