--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,100 +1,60 @@
 {
   "services": {
-    "pdf": {
-      "title": "services.pdf.title",
-      "headline": "services.pdf.headline",
-      "subtitle": "services.pdf.subtitle",
-      "trust": {
-        "local": "Работает прямо в браузере",
-        "fast": "Быстро и удобно",
-        "pdfOnly": "Поддержка PDF"
-      },
+    "pdfEditor": {
+      "title": "Онлайн-редактор PDF",
+      "headline": "Редактирование PDF онлайн",
+      "subtitle": "Добавляйте текст, подписи, редактируйте страницы и скачивайте PDF за секунды.",
+
       "upload": {
-        "title": "Файлы",
-        "add": "Добавить",
-        "dropTitle": "Перетащи PDF сюда",
-        "dropText": "или выбери файлы вручную",
-        "pick": "Выбрать PDF",
+        "title": "Загрузка PDF",
+        "add": "Добавить файлы",
+        "start": "Начать редактирование",
+        "replace": "Заменить файл",
+        "clear": "Очистить список",
+        "hint": "Загрузите один или несколько PDF для начала работы."
+      },
+
+      "pages": "Страницы",
+      "page": "Страница",
+
+      "preview": "Предпросмотр",
+      "previewHint": "Загрузите файл для просмотра.",
+
+      "tools": {
+        "text": "Текст",
+        "signature": "Подпись"
+      },
+
+      "text": {
+        "title": "Добавить текст"
+      },
+
+      "applyText": "Применить текст",
+
+      "signature": {
+        "title": "Нарисовать подпись",
         "clear": "Очистить"
       },
-      "files": {
-        "title": "Выбранные файлы",
-        "hint": "Для объединения/порядка используй стрелки"
+
+      "applySignature": "Применить подпись",
+
+      "actions": {
+        "undo": "Отменить",
+        "redo": "Повторить",
+        "download": "Скачать"
       },
-      "tools": {
-        "title": "Инструменты",
-        "active": "Активный инструмент",
-        "merge": {
-          "title": "Объединить",
-          "desc": "Склей несколько PDF в один файл"
-        },
-        "split": {
-          "title": "Разделить",
-          "desc": "Разбей PDF на части или страницы"
-        },
-        "compress": {
-          "title": "Сжать",
-          "desc": "Уменьши размер PDF (визуально аккуратно)"
-        },
-        "rotate": {
-          "title": "Повернуть",
-          "desc": "Поверни страницы на 90/180/270°"
-        },
-        "reorder": {
-          "title": "Порядок",
-          "desc": "Измени порядок документов перед сборкой"
-        },
-        "watermark": {
-          "title": "Водяной знак",
-          "desc": "Добавь текстовый watermark"
-        },
-        "protect": {
-          "title": "Защитить",
-          "desc": "Установи пароль на PDF"
-        },
-        "unlock": {
-          "title": "Снять пароль",
-          "desc": "Попробуй открыть защищённый PDF"
-        }
+
+      "errors": {
+        "create": "Не удалось создать задачу PDF.",
+        "applyText": "Не удалось добавить текст.",
+        "applySignature": "Не удалось добавить подпись.",
+        "undo": "Не удалось отменить действие.",
+        "redo": "Не удалось повторить действие.",
+        "download": "Не удалось скачать файл."
       },
-      "settings": {
-        "split": {
-          "title": "Настройки разделения",
-          "ranges": "Диапазоны",
-          "every": "Каждую N",
-          "placeholder": "Напр.: 1-3, 7, 10-12"
-        },
-        "rotate": {
-          "title": "Поворот"
-        },
-        "compress": {
-          "title": "Уровень сжатия",
-          "light": "Лёгкое",
-          "balanced": "Баланс",
-          "max": "Максимум"
-        },
-        "watermark": {
-          "title": "Водяной знак",
-          "placeholder": "Текст водяного знака",
-          "opacity": "Прозрачность"
-        },
-        "protect": {
-          "title": "Пароль",
-          "placeholder": "Введите пароль"
-        }
-      },
-      "hints": {
-        "merge": "Добавь минимум 2 PDF — получится один итоговый файл.",
-        "reorder": "Меняй порядок файлов стрелками слева — итог пойдёт в этом порядке.",
-        "unlock": "Если PDF защищён — попробуем открыть его (если пароль известен)."
-      },
-      "run": {
-        "title": "Готово?",
-        "text": "Запусти обработку и скачай результат.",
-        "action": "Запустить",
-        "processing": "Обрабатываю"
-      },
-      "footerNote": "Формат результата зависит от выбранного инструмента. Данные не сохраняются на сервере."
+
+      "dpi": "DPI",
+      "version": "Версия"
     }
   },
   "menu": {
