--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -1,44 +1,72 @@
 {
   "services": {
     "pdfEditor": {
+      "text": {
+        "title": "Мәтін қосу",
+        "valueLabel": "Мәтін",
+        "valuePlaceholder": "Мәтінді енгізіңіз",
+        "fontLabel": "Қаріп",
+        "fontSizeLabel": "Өлшем",
+        "colorLabel": "Түс",
+        "opacityLabel": "Мөлдірлік",
+        "alignLabel": "Туралау",
+        "styleLabel": "Мәнер",
+        "bold": "Қалың",
+        "italic": "Көлбеу",
+        "underline": "Асты сызылған",
+        "applyLabel": "Қолдану",
+        "hintDrag": "Орнын таңдау үшін мәтінді бетте сүйреп апарыңыз"
+      },
+      "signature": {
+        "strokeWidthLabel": "Сызық қалыңдығы",
+        "opacityLabel": "Мөлдірлік",
+        "actionsLabel": "Әрекеттер",
+        "applyLabel": "Қолдану",
+        "hintDraw": "Қолтаңбаны өрісте салып, бетке орналастырыңыз",
+        "title": "Қолтаңба салу",
+        "clear": "Тазарту"
+      },
+      "toolbar": {
+        "pageLabel": "Бет",
+        "dpiLabel": "DPI",
+        "backgroundLabel": "Фон"
+      },
+      "background": {
+        "transparent": "Мөлдір",
+        "white": "Ақ",
+        "black": "Қара"
+      },
       "title": "Онлайн PDF редакторы",
-      "headline": "PDF файлдарын онлайн өңдеу",
-      "subtitle": "Мәтін қосыңыз, қолтаңба салыңыз және PDF файлын жүктеп алыңыз.",
+      "headline": "PDF файлдарын онлайн өңдеңіз",
+      "subtitle": "Мәтін, қолтаңба қосыңыз, беттерді бұрыңыз және дайын PDF файлын бірнеше секундта жүктеп алыңыз.",
       "upload": {
         "title": "PDF жүктеу",
-        "add": "Файл қосу",
+        "add": "Файлдар қосу",
         "start": "Өңдеуді бастау",
         "replace": "Файлды ауыстыру",
-        "clear": "Тізімді тазалау",
-        "hint": "Өңдеуді бастау үшін PDF файлдарын жүктеңіз."
+        "clear": "Тізімді тазарту",
+        "hint": "Өңдеуді бастау үшін бір немесе бірнеше PDF файлын жүктеңіз."
       },
       "pages": "Беттер",
       "page": "Бет",
       "preview": "Алдын ала қарау",
-      "previewHint": "Алдымен файл жүктеңіз.",
+      "previewHint": "Алдын ала қарауды көру үшін файл жүктеңіз.",
       "tools": {
         "text": "Мәтін",
         "signature": "Қолтаңба"
       },
-      "text": {
-        "title": "Мәтін қосу"
-      },
       "applyText": "Мәтінді қолдану",
-      "signature": {
-        "title": "Қолтаңба салу",
-        "clear": "Тазалау"
-      },
       "applySignature": "Қолтаңбаны қолдану",
       "actions": {
         "undo": "Болдырмау",
         "redo": "Қайталау",
-        "download": "Жүктеу"
+        "download": "Жүктеп алу"
       },
       "errors": {
         "create": "PDF тапсырмасын жасау мүмкін болмады.",
-        "applyText": "Мәтінді қосу мүмкін болмады.",
-        "applySignature": "Қолтаңба қосу мүмкін болмады.",
-        "undo": "Әрекетті қайтару мүмкін болмады.",
+        "applyText": "Мәтінді қолдану мүмкін болмады.",
+        "applySignature": "Қолтаңбаны қолдану мүмкін болмады.",
+        "undo": "Болдырмау мүмкін болмады.",
         "redo": "Қайталау мүмкін болмады.",
         "download": "Файлды жүктеу мүмкін болмады."
       },
