--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,58 +1,75 @@
 {
   "services": {
     "pdfEditor": {
-      "title": "Онлайн-редактор PDF",
-      "headline": "Редактирование PDF онлайн",
-      "subtitle": "Добавляйте текст, подписи, редактируйте страницы и скачивайте PDF за секунды.",
-
+      "text": {
+        "title": "Добавить текст",
+        "valueLabel": "Текст",
+        "valuePlaceholder": "Введите текст",
+        "fontLabel": "Шрифт",
+        "fontSizeLabel": "Размер",
+        "colorLabel": "Цвет",
+        "opacityLabel": "Прозрачность",
+        "alignLabel": "Выравнивание",
+        "styleLabel": "Стиль",
+        "bold": "Жирный",
+        "italic": "Курсив",
+        "underline": "Подчёркивание",
+        "applyLabel": "Применить",
+        "hintDrag": "Перетащите текст по странице, чтобы выбрать позицию"
+      },
+      "signature": {
+        "strokeWidthLabel": "Толщина линии",
+        "opacityLabel": "Прозрачность",
+        "actionsLabel": "Действия",
+        "applyLabel": "Применить",
+        "hintDraw": "Нарисуйте подпись в области и разместите её на странице",
+        "title": "Нарисовать подпись",
+        "clear": "Очистить"
+      },
+      "toolbar": {
+        "pageLabel": "Страница",
+        "dpiLabel": "DPI",
+        "backgroundLabel": "Фон"
+      },
+      "background": {
+        "transparent": "Прозрачный",
+        "white": "Белый",
+        "black": "Чёрный"
+      },
+      "title": "Онлайн PDF‑редактор",
+      "headline": "Редактируйте PDF‑файлы онлайн",
+      "subtitle": "Добавляйте текст, подписи, поворачивайте страницы и скачивайте готовый PDF за считанные секунды.",
       "upload": {
-        "title": "Загрузка PDF",
+        "title": "Загрузить PDF",
         "add": "Добавить файлы",
         "start": "Начать редактирование",
         "replace": "Заменить файл",
         "clear": "Очистить список",
-        "hint": "Загрузите один или несколько PDF для начала работы."
+        "hint": "Загрузите один или несколько PDF‑файлов, чтобы начать редактирование."
       },
-
       "pages": "Страницы",
       "page": "Страница",
-
       "preview": "Предпросмотр",
-      "previewHint": "Загрузите файл для просмотра.",
-
+      "previewHint": "Загрузите файл, чтобы увидеть предпросмотр.",
       "tools": {
         "text": "Текст",
         "signature": "Подпись"
       },
-
-      "text": {
-        "title": "Добавить текст"
-      },
-
       "applyText": "Применить текст",
-
-      "signature": {
-        "title": "Нарисовать подпись",
-        "clear": "Очистить"
-      },
-
       "applySignature": "Применить подпись",
-
       "actions": {
         "undo": "Отменить",
         "redo": "Повторить",
         "download": "Скачать"
       },
-
       "errors": {
-        "create": "Не удалось создать задачу PDF.",
-        "applyText": "Не удалось добавить текст.",
-        "applySignature": "Не удалось добавить подпись.",
-        "undo": "Не удалось отменить действие.",
-        "redo": "Не удалось повторить действие.",
+        "create": "Не удалось создать PDF‑задачу.",
+        "applyText": "Не удалось применить текст.",
+        "applySignature": "Не удалось применить подпись.",
+        "undo": "Не удалось выполнить отмену.",
+        "redo": "Не удалось выполнить повтор.",
         "download": "Не удалось скачать файл."
       },
-
       "dpi": "DPI",
       "version": "Версия"
     }
