--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -72,6 +72,81 @@
       },
       "dpi": "DPI",
       "version": "Нұсқа"
+    },
+    "converter": {
+      "title": "Файл конвертері",
+      "subtitle": "жылдам, таза және артық сиқырсыз ✨",
+      "description": "Файлды жүктеп, форматты таңдаңыз — нәтижені алыңыз. Суреттерді 20-ға дейін топтап жүктеуге болады.",
+
+      "modes": {
+        "media": {
+          "title": "Суреттер",
+          "description": "PNG/JPEG/WEBP → бір формат. 20 файлға дейін, ZIP қайтарылады."
+        },
+        "data": {
+          "title": "Деректер",
+          "description": "CSV/JSON/XML → CSV/JSON/XML/XLSX. Бір файл."
+        },
+        "document": {
+          "title": "Құжаттар",
+          "description": "DOCX ↔ PDF (PDF→DOCX best effort). Бір файл."
+        }
+      },
+
+      "panel": {
+        "images": {
+          "title": "Суреттер",
+          "description": "Қолдау: png, jpg/jpeg, webp. Бірнеше файл болса — ZIP."
+        },
+        "data": {
+          "title": "Деректер",
+          "description": "Қолдау: csv, json, xml. Мақсаттар: csv/json/xml/xlsx."
+        },
+        "documents": {
+          "title": "Құжаттар",
+          "description": "Қолдау: docx және pdf. DOCX→PDF тұрақты, PDF→DOCX best effort."
+        }
+      },
+
+      "controls": {
+        "formatLabel": "Нәтиже форматы",
+        "convert": "Convert",
+        "converting": "Converting…"
+      },
+
+      "dropzone": {
+        "title": "Файлды осында тастаңыз",
+        "manual": "немесе қолмен таңдаңыз",
+        "support": "Қолдау",
+        "limit": "Шектеу",
+        "upload": "Жүктеу",
+        "clear": "Тазалау"
+      },
+
+      "messages": {
+        "noFiles": "Конвертациялау үшін файл қосыңыз.",
+        "singleOnly": "Бұл режимде тек бір файлға рұқсат етіледі.",
+        "maxFiles": "Ең көбі 20 сурет.",
+        "unsupported": "Қолдау көрсетілмейтін файл",
+        "success": "Дайын! Файл жүктелді 👌",
+        "error": "Конвертация сәтсіз аяқталды."
+      },
+
+      "files": {
+        "title": "Файлдар",
+        "zipHint": "Бірнеше файл болса — нәтиже ZIP болады."
+      },
+
+      "tips": {
+        "imageAlpha": "PNG → JPEG: мөлдірлік ақ фонға ауыстырылады.",
+        "pdfDocx": "PDF → DOCX: түпнұсқадан айырмашылық болуы мүмкін."
+      },
+
+      "promo": {
+        "title": "Көбірек формат керек пе?",
+        "description": "Тапсырма кезегі, прогресс жолағы, авто-zip және сапа баптаулары қосуға болады.",
+        "cta": "Ұсыныс жіберу"
+      }
     }
   },
   "menu": {
