--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -72,6 +72,81 @@
       },
       "dpi": "DPI",
       "version": "Версия"
+    },
+    "converter": {
+      "title": "Конвертер файлов",
+      "subtitle": "быстро, аккуратно и без лишней магии ✨",
+      "description": "Загрузи файл, выбери формат — и получишь результат. Для изображений можно пачкой до 20 штук.",
+
+      "modes": {
+        "media": {
+          "title": "Изображения",
+          "description": "PNG/JPEG/WEBP → один формат. До 20 файлов, вернём zip."
+        },
+        "data": {
+          "title": "Данные",
+          "description": "CSV/JSON/XML → CSV/JSON/XML/XLSX. По одному файлу."
+        },
+        "document": {
+          "title": "Документы",
+          "description": "DOCX ↔ PDF (best effort для PDF→DOCX). По одному файлу."
+        }
+      },
+
+      "panel": {
+        "images": {
+          "title": "Изображения",
+          "description": "Поддержка: png, jpg/jpeg, webp. До 20 файлов. Если файлов > 1 — вернём zip."
+        },
+        "data": {
+          "title": "Данные",
+          "description": "Поддержка: csv, json, xml. Цели: csv/json/xml/xlsx. По одному файлу."
+        },
+        "documents": {
+          "title": "Документы",
+          "description": "Поддержка: docx и pdf. DOCX→PDF стабильно, PDF→DOCX best effort."
+        }
+      },
+
+      "controls": {
+        "formatLabel": "Формат результата",
+        "convert": "Convert",
+        "converting": "Converting…"
+      },
+
+      "dropzone": {
+        "title": "Перетащи файл сюда",
+        "manual": "или выбери вручную",
+        "support": "Поддержка",
+        "limit": "Лимит",
+        "upload": "Загрузить",
+        "clear": "Очистить"
+      },
+
+      "messages": {
+        "noFiles": "Добавь файл(ы) для конвертации.",
+        "singleOnly": "В этом режиме можно загрузить только один файл.",
+        "maxFiles": "Для изображений максимум 20 файлов.",
+        "unsupported": "Неподдерживаемый файл",
+        "success": "Готово! Файл скачался 👌",
+        "error": "Не удалось выполнить конвертацию."
+      },
+
+      "files": {
+        "title": "Файлы",
+        "zipHint": "Если файлов больше одного — результат будет zip."
+      },
+
+      "tips": {
+        "imageAlpha": "PNG → JPEG: прозрачность заменится белым фоном.",
+        "pdfDocx": "PDF → DOCX: может отличаться от оригинала — это нормально."
+      },
+
+      "promo": {
+        "title": "Нужно больше форматов?",
+        "description": "Можно добавить очереди задач, прогресс-бар, авто-zip и пресеты качества.",
+        "cta": "Написать пожелание"
+      }
     }
   },
   "menu": {
