--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -45,7 +45,8 @@
         "start": "Өңдеуді бастау",
         "replace": "Файлды ауыстыру",
         "clear": "Тізімді тазарту",
-        "hint": "Өңдеуді бастау үшін бір немесе бірнеше PDF файлын жүктеңіз."
+        "hint": "Өңдеуді бастау үшін бір немесе бірнеше PDF файлын жүктеңіз.",
+        "singleHelp": "Өңдеу үшін тек бір PDF жүктеуге болады."
       },
       "pages": "Беттер",
       "page": "Бет",
@@ -77,7 +78,6 @@
       "title": "Файл конвертері",
       "subtitle": "жылдам, таза және артық сиқырсыз ✨",
       "description": "Файлды жүктеп, форматты таңдаңыз — нәтижені алыңыз. Суреттерді 20-ға дейін топтап жүктеуге болады.",
-
       "modes": {
         "media": {
           "title": "Суреттер",
@@ -92,7 +92,6 @@
           "description": "DOCX ↔ PDF (PDF→DOCX best effort). Бір файл."
         }
       },
-
       "panel": {
         "images": {
           "title": "Суреттер",
@@ -107,13 +106,11 @@
           "description": "Қолдау: docx және pdf. DOCX→PDF тұрақты, PDF→DOCX best effort."
         }
       },
-
       "controls": {
         "formatLabel": "Нәтиже форматы",
         "convert": "Convert",
         "converting": "Converting…"
       },
-
       "dropzone": {
         "title": "Файлды осында тастаңыз",
         "manual": "немесе қолмен таңдаңыз",
@@ -122,7 +119,6 @@
         "upload": "Жүктеу",
         "clear": "Тазалау"
       },
-
       "messages": {
         "noFiles": "Конвертациялау үшін файл қосыңыз.",
         "singleOnly": "Бұл режимде тек бір файлға рұқсат етіледі.",
@@ -131,17 +127,14 @@
         "success": "Дайын! Файл жүктелді 👌",
         "error": "Конвертация сәтсіз аяқталды."
       },
-
       "files": {
         "title": "Файлдар",
         "zipHint": "Бірнеше файл болса — нәтиже ZIP болады."
       },
-
       "tips": {
         "imageAlpha": "PNG → JPEG: мөлдірлік ақ фонға ауыстырылады.",
         "pdfDocx": "PDF → DOCX: түпнұсқадан айырмашылық болуы мүмкін."
       },
-
       "promo": {
         "title": "Көбірек формат керек пе?",
         "description": "Тапсырма кезегі, прогресс жолағы, авто-zip және сапа баптаулары қосуға болады.",
