--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -45,7 +45,8 @@
         "start": "Начать редактирование",
         "replace": "Заменить файл",
         "clear": "Очистить список",
-        "hint": "Загрузите один или несколько PDF‑файлов, чтобы начать редактирование."
+        "hint": "Загрузите один или несколько PDF‑файлов, чтобы начать редактирование.",
+        "singleHelp": "Можно загрузить только один PDF для редактирования."
       },
       "pages": "Страницы",
       "page": "Страница",
